Use white-space: pre-wrap style to ensure whitespace in cells, facets and transformation previews shows exactly as in the underlying data

--- a/main/webapp/modules/core/styles/project/facets.less
+++ b/main/webapp/modules/core/styles/project/facets.less
@@ -147,6 +147,7 @@ a.facet-title-remove:hover {
   }
 
 .facet-choice {
+  white-space: pre-wrap;
   padding: 2px 5px;
   clear: both;
   }
