--- a/main/webapp/modules/core/styles/views/data-table-view.less
+++ b/main/webapp/modules/core/styles/views/data-table-view.less
@@ -168,6 +168,7 @@ div.data-table-cell-content {
   line-height: 1.2;
   color: #222;
   position: relative;
+  white-space: pre-wrap;
   }
 
 div.data-table-cell-content-numeric {
